# smart-home

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.roborock  PLAN.md  README.md  TODO.md  deploy-watch.bat  deploy.sh  docker-compose.yml  eslint.config.js  nginx.conf  package.json  smart-home-deploy.service  start.sh  watch-deploy.sh
.github/workflows/: ci.yml  deploy.yml
backend/: STATUS.md  package.json
backend/scripts/: fetch-tuya-keys.py
backend/src/: config.ts  index.ts
backend/src/__tests__/: automation-actions.test.ts  circuit-breaker.test.ts  database-ops.test.ts  error-handler.test.ts  errors.test.ts  fetch-timeout.test.ts  heater-override.test.ts  logger.test.ts  pending-service.test.ts  time-windows.test.ts  translations.test.ts  validation.test.ts
backend/src/automations/: automation-actions.ts  automation-triggers.ts
backend/src/db/: database.ts  home-status.ts  maintenance.ts
backend/src/health/: health-service.ts
backend/src/middleware/: auth.ts  error-handler.ts  rate-limit.ts
backend/src/notifications/: alarm-service.ts  error-notification.ts  sms-service.ts  telegram-service.ts  voice-service.ts
backend/src/roborock/: roborock.ts
frontend/: package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/src/: app.css  app.html
frontend/static/: manifest.json
roborock-bridge/: main.py  pyproject.toml
scripts/: backup.ps1  deploy.ps1  deploy.sh  healthcheck.ps1  install-services.ps1
(+517 files in other folders)
