[project]
name = "roborock-bridge"
version = "0.1.0"
description = "HTTP bridge for Roborock vacuum control"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-roborock>=3.14.0",
    "pyyaml>=6.0",
]

[project.scripts]
roborock-bridge = "main:run"
